--- a/index.html
+++ b/index.html
@@ -1,108 +1,175 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>个人主页 - 张三</title>
+  <meta charset="utf-8">
+  <title>雷霆战机 - HTML5 版</title>
   <style>
     body {
-      font-family: "Helvetica Neue", Arial, sans-serif;
-      line-height: 1.6;
       margin: 0;
-      padding: 0;
-      background: #f5f7fa;
-      color: #333;
+      overflow: hidden;
+      background: black;
     }
-    header {
-      background: #2c3e50;
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background: #111;
+    }
+    #score {
+      position: absolute;
+      top: 10px;
+      left: 10px;
       color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.2rem;
-    }
-    header p {
-      margin: .3rem 0;
-    }
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    h2 {
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: .3rem;
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1.5rem;
-      background: #2c3e50;
-      color: white;
-      margin-top: 2rem;
-      font-size: 0.9rem;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+      font-size: 20px;
+      font-family: Arial, sans-serif;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>张三</h1>
-    <p>📧 zhangsan@example.com | 💼 <a href="https://github.com/zhangsan" target="_blank">GitHub</a></p>
-    <p>软件工程师 | 全栈开发 | 人工智能</p>
-  </header>
+  <div id="score">分数: 0</div>
+  <canvas id="gameCanvas" width="480" height="640"></canvas>
 
-  <main>
-    <section>
-      <h2>教育经历</h2>
-      <ul>
-        <li>北京大学 - 计算机科学与技术 (2018 - 2022)</li>
-      </ul>
-    </section>
+  <script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+    const scoreEl = document.getElementById("score");
 
-    <section>
-      <h2>工作经历</h2>
-      <ul>
-        <li>2022 - 至今: XXX 公司 - 软件工程师  
-            <br />负责后端服务开发与优化，提升系统性能 30%。</li>
-      </ul>
-    </section>
+    // 玩家飞机
+    const player = {
+      x: canvas.width / 2 - 20,
+      y: canvas.height - 80,
+      width: 40,
+      height: 40,
+      speed: 5
+    };
 
-    <section>
-      <h2>技能</h2>
-      <ul>
-        <li>编程语言: Java, Python, C++</li>
-        <li>Web 开发: HTML, CSS, JavaScript, React</li>
-        <li>其他: 数据库, 云计算, 机器学习</li>
-      </ul>
-    </section>
+    // 子弹 & 敌机
+    let bullets = [];
+    let enemies = [];
+    let score = 0;
+    let gameOver = false;
 
-    <section>
-      <h2>项目展示</h2>
-      <ul>
-        <li><a href="https://github.com/zhangsan/project1" target="_blank">项目一：自动化漏洞检测工具</a></li>
-        <li><a href="https://github.com/zhangsan/project2" target="_blank">项目二：个人博客系统</a></li>
-      </ul>
-    </section>
-  </main>
+    // 键盘输入
+    const keys = {};
+    document.addEventListener("keydown", e => keys[e.code] = true);
+    document.addEventListener("keyup", e => keys[e.code] = false);
 
-  <footer>
-    © 2025 张三 | 本页面托管于 <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>
-  </footer>
+    // 画玩家
+    function drawPlayer() {
+      ctx.fillStyle = "cyan";
+      ctx.fillRect(player.x, player.y, player.width, player.height);
+    }
+
+    // 发射子弹
+    function shoot() {
+      bullets.push({
+        x: player.x + player.width / 2 - 3,
+        y: player.y,
+        width: 6,
+        height: 12,
+        speed: 7
+      });
+    }
+
+    // 画子弹
+    function drawBullets() {
+      ctx.fillStyle = "yellow";
+      bullets.forEach((b, i) => {
+        b.y -= b.speed;
+        ctx.fillRect(b.x, b.y, b.width, b.height);
+        if (b.y < 0) bullets.splice(i, 1);
+      });
+    }
+
+    // 生成敌机
+    function spawnEnemy() {
+      enemies.push({
+        x: Math.random() * (canvas.width - 40),
+        y: -40,
+        width: 40,
+        height: 40,
+        speed: 2 + Math.random() * 2
+      });
+    }
+
+    // 画敌机
+    function drawEnemies() {
+      ctx.fillStyle = "red";
+      enemies.forEach((e, i) => {
+        e.y += e.speed;
+        ctx.fillRect(e.x, e.y, e.width, e.height);
+
+        // 超出屏幕
+        if (e.y > canvas.height) enemies.splice(i, 1);
+
+        // 撞到玩家
+        if (
+          e.x < player.x + player.width &&
+          e.x + e.width > player.x &&
+          e.y < player.y + player.height &&
+          e.y + e.height > player.y
+        ) {
+          gameOver = true;
+        }
+      });
+    }
+
+    // 碰撞检测
+    function checkCollisions() {
+      bullets.forEach((b, bi) => {
+        enemies.forEach((e, ei) => {
+          if (
+            b.x < e.x + e.width &&
+            b.x + b.width > e.x &&
+            b.y < e.y + e.height &&
+            b.y + b.height > e.y
+          ) {
+            // 碰撞
+            bullets.splice(bi, 1);
+            enemies.splice(ei, 1);
+            score += 10;
+            scoreEl.textContent = "分数: " + score;
+          }
+        });
+      });
+    }
+
+    // 游戏循环
+    function gameLoop() {
+      if (gameOver) {
+        ctx.fillStyle = "white";
+        ctx.font = "40px Arial";
+        ctx.fillText("游戏结束", canvas.width / 2 - 100, canvas.height / 2);
+        return;
+      }
+
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // 控制移动
+      if (keys["ArrowLeft"] && player.x > 0) player.x -= player.speed;
+      if (keys["ArrowRight"] && player.x < canvas.width - player.width) player.x += player.speed;
+      if (keys["ArrowUp"] && player.y > 0) player.y -= player.speed;
+      if (keys["ArrowDown"] && player.y < canvas.height - player.height) player.y += player.speed;
+      if (keys["Space"]) {
+        if (!keys.shooting) {
+          shoot();
+          keys.shooting = true;
+        }
+      } else {
+        keys.shooting = false;
+      }
+
+      drawPlayer();
+      drawBullets();
+      drawEnemies();
+      checkCollisions();
+
+      requestAnimationFrame(gameLoop);
+    }
+
+    // 每隔 1 秒生成敌机
+    setInterval(spawnEnemy, 1000);
+
+    gameLoop();
+  </script>
 </body>
 </html>
