--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     canvas {
       display: block;
       margin: 0 auto;
-      background: #111;
+      background: url("background.png") repeat-y; /* 背景图 */
+      background-size: cover;
     }
     #score {
       position: absolute;
@@ -33,6 +34,16 @@
     const ctx = canvas.getContext("2d");
     const scoreEl = document.getElementById("score");
 
+    // 载入图片资源（需要放在仓库根目录）
+    const playerImg = new Image();
+    playerImg.src = "player.png";   // 玩家飞机
+
+    const enemyImg = new Image();
+    enemyImg.src = "enemy.png";     // 敌机
+
+    const bulletImg = new Image();
+    bulletImg.src = "bullet.png";   // 子弹
+
     // 玩家飞机
     const player = {
       x: canvas.width / 2 - 20,
@@ -42,45 +53,37 @@
       speed: 5
     };
 
-    // 子弹 & 敌机
     let bullets = [];
     let enemies = [];
     let score = 0;
     let gameOver = false;
 
-    // 键盘输入
     const keys = {};
     document.addEventListener("keydown", e => keys[e.code] = true);
     document.addEventListener("keyup", e => keys[e.code] = false);
 
-    // 画玩家
     function drawPlayer() {
-      ctx.fillStyle = "cyan";
-      ctx.fillRect(player.x, player.y, player.width, player.height);
+      ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
     }
 
-    // 发射子弹
     function shoot() {
       bullets.push({
-        x: player.x + player.width / 2 - 3,
+        x: player.x + player.width / 2 - 5,
         y: player.y,
-        width: 6,
-        height: 12,
+        width: 10,
+        height: 20,
         speed: 7
       });
     }
 
-    // 画子弹
     function drawBullets() {
-      ctx.fillStyle = "yellow";
       bullets.forEach((b, i) => {
         b.y -= b.speed;
-        ctx.fillRect(b.x, b.y, b.width, b.height);
+        ctx.drawImage(bulletImg, b.x, b.y, b.width, b.height);
         if (b.y < 0) bullets.splice(i, 1);
       });
     }
 
-    // 生成敌机
     function spawnEnemy() {
       enemies.push({
         x: Math.random() * (canvas.width - 40),
@@ -91,17 +94,13 @@
       });
     }
 
-    // 画敌机
     function drawEnemies() {
-      ctx.fillStyle = "red";
       enemies.forEach((e, i) => {
         e.y += e.speed;
-        ctx.fillRect(e.x, e.y, e.width, e.height);
+        ctx.drawImage(enemyImg, e.x, e.y, e.width, e.height);
 
-        // 超出屏幕
         if (e.y > canvas.height) enemies.splice(i, 1);
 
-        // 撞到玩家
         if (
           e.x < player.x + player.width &&
           e.x + e.width > player.x &&
@@ -113,7 +112,6 @@
       });
     }
 
-    // 碰撞检测
     function checkCollisions() {
       bullets.forEach((b, bi) => {
         enemies.forEach((e, ei) => {
@@ -123,7 +121,6 @@
             b.y < e.y + e.height &&
             b.y + b.height > e.y
           ) {
-            // 碰撞
             bullets.splice(bi, 1);
             enemies.splice(ei, 1);
             score += 10;
@@ -133,7 +130,6 @@
       });
     }
 
-    // 游戏循环
     function gameLoop() {
       if (gameOver) {
         ctx.fillStyle = "white";
@@ -144,7 +140,6 @@
 
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // 控制移动
       if (keys["ArrowLeft"] && player.x > 0) player.x -= player.speed;
       if (keys["ArrowRight"] && player.x < canvas.width - player.width) player.x += player.speed;
       if (keys["ArrowUp"] && player.y > 0) player.y -= player.speed;
@@ -166,9 +161,7 @@
       requestAnimationFrame(gameLoop);
     }
 
-    // 每隔 1 秒生成敌机
     setInterval(spawnEnemy, 1000);
-
     gameLoop();
   </script>
 </body>
