--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
       margin: 0;
       overflow: hidden;
       background: black;
+      text-align: center;
     }
     canvas {
       display: block;
       margin: 0 auto;
-      background: url("background.png") repeat-y; /* 背景图 */
+      background: url("background.png") repeat-y;
       background-size: cover;
     }
     #score {
@@ -23,11 +24,22 @@
       font-size: 20px;
       font-family: Arial, sans-serif;
     }
+    #startBtn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 15px 30px;
+      font-size: 24px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <div id="score">捉弄次数: 0</div>
   <canvas id="gameCanvas" width="480" height="640"></canvas>
+
+  <button id="startBtn">开始游戏</button>
 
   <!-- 背景音乐 -->
   <audio id="bgm" src="bgm.mp3" loop></audio>
@@ -38,165 +50,71 @@
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
     const scoreEl = document.getElementById("score");
+    const startBtn = document.getElementById("startBtn");
 
-    // 音频对象
     const bgm = document.getElementById("bgm");
     const shootSound = document.getElementById("shootSound");
 
-    // 页面加载后自动播放背景音乐
-    window.addEventListener("load", () => {
-      bgm.volume = 0.5; // 音量 0~1
-      bgm.play().catch(() => {
-        // 如果浏览器阻止自动播放，点击屏幕再播放
-        document.body.addEventListener("click", () => {
-          bgm.play();
-        }, { once: true });
-      });
-    });
-
-    // 载入图片资源
     const playerImg = new Image();
-    playerImg.src = "player.png";   // 玩家飞机
-
+    playerImg.src = "player.png";
     const enemyImg = new Image();
-    enemyImg.src = "enemy.png";     // 敌机
-
+    enemyImg.src = "enemy.png";
     const bulletImg = new Image();
-    bulletImg.src = "bullet.png";   // 子弹
+    bulletImg.src = "bullet.png";
 
-    // 玩家飞机
-    const player = {
-      x: canvas.width / 2 - 20,
-      y: canvas.height - 80,
-      width: 40,
-      height: 40,
-      speed: 5
-    };
-
-    let bullets = [];
-    let enemies = [];
-    let score = 0;
-    let gameOver = false;
-
+    const player = { x: canvas.width/2-20, y: canvas.height-80, width: 40, height: 40, speed: 5 };
+    let bullets = [], enemies = [], score = 0, gameOver = false;
     const keys = {};
+
     document.addEventListener("keydown", e => keys[e.code] = true);
     document.addEventListener("keyup", e => keys[e.code] = false);
 
-    function drawPlayer() {
-      ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
-    }
-
+    function drawPlayer() { ctx.drawImage(playerImg, player.x, player.y, player.width, player.height); }
     function shoot() {
-      bullets.push({
-        x: player.x + player.width / 2 - 5,
-        y: player.y,
-        width: 10,
-        height: 20,
-        speed: 7
-      });
-
-      // 播放子弹音效
-      shootSound.currentTime = 0; // 重置播放位置
+      bullets.push({ x: player.x+player.width/2-5, y: player.y, width:10, height:20, speed:7 });
+      shootSound.currentTime = 0;
       shootSound.play();
     }
-
     function drawBullets() {
-      bullets.forEach((b, i) => {
-        b.y -= b.speed;
-        ctx.drawImage(bulletImg, b.x, b.y, b.width, b.height);
-        if (b.y < 0) bullets.splice(i, 1);
-      });
+      bullets.forEach((b,i)=>{ b.y-=b.speed; ctx.drawImage(bulletImg,b.x,b.y,b.width,b.height); if(b.y<0) bullets.splice(i,1); });
     }
-
-    function spawnEnemy() {
-      enemies.push({
-        x: Math.random() * (canvas.width - 40),
-        y: -40,
-        width: 40,
-        height: 40,
-        speed: 2 + Math.random() * 2
-      });
-    }
-
+    function spawnEnemy() { enemies.push({ x: Math.random()*(canvas.width-40), y:-40, width:40, height:40, speed:2+Math.random()*2 }); }
     function drawEnemies() {
-      enemies.forEach((e, i) => {
-        e.y += e.speed;
-        ctx.drawImage(enemyImg, e.x, e.y, e.width, e.height);
-
-        if (e.y > canvas.height) enemies.splice(i, 1);
-
-        // 玩家 vs 敌机 （圆形碰撞）
-        if (
-          isCircleColliding(
-            e.x + e.width / 2, e.y + e.height / 2, e.width * 0.3,
-            player.x + player.width / 2, player.y + player.height / 2, player.width * 0.3
-          )
-        ) {
-          gameOver = true;
-        }
+      enemies.forEach((e,i)=>{
+        e.y+=e.speed; ctx.drawImage(enemyImg,e.x,e.y,e.width,e.height);
+        if(e.y>canvas.height) enemies.splice(i,1);
+        if(isCircleColliding(e.x+e.width/2,e.y+e.height/2,e.width*0.3,player.x+player.width/2,player.y+player.height/2,player.width*0.3)) gameOver=true;
       });
     }
-
     function checkCollisions() {
-      bullets.forEach((b, bi) => {
-        enemies.forEach((e, ei) => {
-          // 子弹 vs 敌机 （圆形碰撞）
-          if (
-            isCircleColliding(
-              b.x + b.width / 2, b.y + b.height / 2, b.width * 0.3,
-              e.x + e.width / 2, e.y + e.height / 2, e.width * 0.3
-            )
-          ) {
-            bullets.splice(bi, 1);
-            enemies.splice(ei, 1);
-            score += 1;
-            scoreEl.textContent = "捉弄次数: " + score;
-          }
-        });
-      });
-    }
-
-    // 圆形碰撞检测
-    function isCircleColliding(x1, y1, r1, x2, y2, r2) {
-      const dx = x1 - x2;
-      const dy = y1 - y2;
-      const distance = Math.sqrt(dx * dx + dy * dy);
-      return distance < r1 + r2;
-    }
-
-    function gameLoop() {
-      if (gameOver) {
-        ctx.fillStyle = "white";
-        ctx.font = "40px Arial";
-        ctx.fillText("捉弄失败", canvas.width / 2 - 100, canvas.height / 2);
-        return;
-      }
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      if (keys["ArrowLeft"] && player.x > 0) player.x -= player.speed;
-      if (keys["ArrowRight"] && player.x < canvas.width - player.width) player.x += player.speed;
-      if (keys["ArrowUp"] && player.y > 0) player.y -= player.speed;
-      if (keys["ArrowDown"] && player.y < canvas.height - player.height) player.y += player.speed;
-      if (keys["Space"]) {
-        if (!keys.shooting) {
-          shoot();
-          keys.shooting = true;
+      bullets.forEach((b,bi)=>{ enemies.forEach((e,ei)=>{ 
+        if(isCircleColliding(b.x+b.width/2,b.y+b.height/2,b.width*0.3,e.x+e.width/2,e.y+e.height/2,e.width*0.3)){
+          bullets.splice(bi,1); enemies.splice(ei,1); score+=1; scoreEl.textContent="捉弄次数: "+score;
         }
-      } else {
-        keys.shooting = false;
-      }
+      });});
+    }
+    function isCircleColliding(x1,y1,r1,x2,y2,r2){ const dx=x1-x2,dy=y1-y2; return Math.sqrt(dx*dx+dy*dy)<r1+r2; }
 
-      drawPlayer();
-      drawBullets();
-      drawEnemies();
-      checkCollisions();
-
+    let enemyInterval;
+    function gameLoop() {
+      if(gameOver){ ctx.fillStyle="white"; ctx.font="40px Arial"; ctx.fillText("捉弄失败",canvas.width/2-100,canvas.height/2); return; }
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      if(keys["ArrowLeft"] && player.x>0) player.x-=player.speed;
+      if(keys["ArrowRight"] && player.x<canvas.width-player.width) player.x+=player.speed;
+      if(keys["ArrowUp"] && player.y>0) player.y-=player.speed;
+      if(keys["ArrowDown"] && player.y<canvas.height-player.height) player.y+=player.speed;
+      if(keys["Space"]){ if(!keys.shooting){ shoot(); keys.shooting=true; } } else { keys.shooting=false; }
+      drawPlayer(); drawBullets(); drawEnemies(); checkCollisions();
       requestAnimationFrame(gameLoop);
     }
 
-    setInterval(spawnEnemy, 1000);
-    gameLoop();
+    startBtn.addEventListener("click", () => {
+      startBtn.style.display = "none"; // 隐藏按钮
+      bgm.volume = 0.5;
+      bgm.play();
+      enemyInterval = setInterval(spawnEnemy, 1000);
+      gameLoop();
+    });
   </script>
 </body>
 </html>
