--- a/index.html
+++ b/index.html
@@ -102,19 +102,26 @@
     document.addEventListener("keydown", e => keys[e.code] = true);
     document.addEventListener("keyup", e => keys[e.code] = false);
 
-    function drawPlayer() { ctx.drawImage(playerImg, player.x, player.y, player.width, player.height); }
+    function drawPlayer() {
+      if (playerImg.complete) ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
+    }
     function shoot() {
       bullets.push({ x: player.x+player.width/2-5, y: player.y, width:10, height:20, speed:7 });
       shootSound.currentTime = 0;
       shootSound.play();
     }
     function drawBullets() {
-      bullets.forEach((b,i)=>{ b.y-=b.speed; ctx.drawImage(bulletImg,b.x,b.y,b.width,b.height); if(b.y<0) bullets.splice(i,1); });
+      bullets.forEach((b,i)=>{ 
+        b.y-=b.speed; 
+        if(bulletImg.complete) ctx.drawImage(bulletImg,b.x,b.y,b.width,b.height); 
+        if(b.y<0) bullets.splice(i,1); 
+      });
     }
     function spawnEnemy() { enemies.push({ x: Math.random()*(canvas.width-40), y:-40, width:40, height:40, speed:2+Math.random()*2 }); }
     function drawEnemies() {
       enemies.forEach((e,i)=>{
-        e.y+=e.speed; ctx.drawImage(enemyImg,e.x,e.y,e.width,e.height);
+        e.y+=e.speed; 
+        if(enemyImg.complete) ctx.drawImage(enemyImg,e.x,e.y,e.width,e.height);
         if(e.y>canvas.height) enemies.splice(i,1);
         if(isCircleColliding(e.x+e.width/2,e.y+e.height/2,e.width*0.3,player.x+player.width/2,player.y+player.height/2,player.width*0.3)) gameOver=true;
       });
@@ -189,23 +196,3 @@
         if(keys["ArrowUp"] && player.y>0) player.y-=player.speed;
         if(keys["ArrowDown"] && player.y<canvas.height-player.height) player.y+=player.speed;
         if(keys["Space"]){ if(!keys.shooting){ shoot(); keys.shooting=true; } } else { keys.shooting=false; }
-      }
-
-      drawPlayer();
-      drawBullets();
-      drawEnemies();
-      checkCollisions();
-
-      requestAnimationFrame(gameLoop);
-    }
-
-    startBtn.addEventListener("click", () => {
-      startBtn.style.display="none";
-      bgm.volume=0.5;
-      bgm.play();
-      enemyInterval = setInterval(spawnEnemy,1000);
-      gameLoop();
-    });
-  </script>
-</body>
-</html>
