--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
       color: white;
       font-family: Arial, sans-serif;
     }
+    /* 全屏粉色半透明背景 */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 105, 180, 0.2); /* 粉色半透明 */
+      z-index: -1; /* 放在最底层 */
+    }
     canvas {
       display: block;
       margin: 0 auto;
       background: url("background.png") repeat-y;
       background-size: cover;
+      z-index: 1;
     }
     #score {
       position: absolute;
@@ -24,6 +35,7 @@
       left: 10px;
       color: white;
       font-size: 20px;
+      z-index: 2;
     }
     #startBtn {
       position: absolute;
@@ -33,6 +45,7 @@
       padding: 15px 30px;
       font-size: 24px;
       cursor: pointer;
+      z-index: 2;
     }
     #mobileMsg {
       display: none;
@@ -42,15 +55,45 @@
       transform: translate(-50%, -50%);
       font-size: 22px;
       color: red;
+      z-index: 2;
+    }
+    /* 游戏规则面板 */
+    #rules {
+      position: absolute;
+      top: 80px;
+      left: 20px;
+      width: 200px;
+      background: rgba(255, 192, 203, 0.7); /* 浅粉色半透明 */
+      color: black;
+      padding: 15px;
+      border-radius: 10px;
+      font-size: 16px;
+      text-align: left;
+      line-height: 1.5em;
+      z-index: 2;
     }
   </style>
 </head>
 <body>
+  <div id="overlay"></div> <!-- 粉色半透明背景 -->
+
   <div id="score">捉弄次数: 0</div>
   <canvas id="gameCanvas" width="480" height="640"></canvas>
 
   <button id="startBtn">开始游戏</button>
   <div id="mobileMsg">该项目仅支持电脑端，请在PC浏览器中体验。</div>
+
+  <!-- 游戏规则 -->
+  <div id="rules">
+    <h3>游戏规则</h3>
+    <ul>
+      <li>方向键 ←↑↓→ 控制飞机移动</li>
+      <li>空格键 发射子弹</li>
+      <li>击中敌机 +1 分</li>
+      <li>被敌机撞到则游戏结束</li>
+      <li>尽可能多地获取分数！</li>
+    </ul>
+  </div>
 
   <!-- 背景音乐 -->
   <audio id="bgm" src="bgm.mp3" loop></audio>
@@ -156,6 +199,7 @@
       startBtn.style.display="none";
       scoreEl.style.display="none";
       mobileMsg.style.display="block";
+      document.getElementById("rules").style.display="none"; // 手机端隐藏规则
     }
   </script>
 </body>
