--- a/index.html
+++ b/index.html
@@ -2,76 +2,16 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>雷霆战机(高木版) - HTML5 版</title>
+  <title>kiss dream(高木版) - HTML5 版</title>
   <style>
     body {
       margin: 0;
       overflow: hidden;
       background: white url("bg1.png") center/cover no-repeat;
       text-align: center;
-      color: white;
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
     }
-    /* 全屏粉色半透明背景 */
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 105, 180, 0.2);
-      z-index: -1;
-    }
-    canvas {
-      display: block;
-      margin: 0 auto;
-      background: url("background.png") repeat-y;
-      background-size: cover;
-      z-index: 1;
-    }
-    #score {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      color: white;
-      font-size: 20px;
-      z-index: 2;
-    }
-    #startBtn {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 15px 30px;
-      font-size: 24px;
-      cursor: pointer;
-      z-index: 2;
-    }
-    #mobileMsg {
-      display: none;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 22px;
-      color: red;
-      z-index: 2;
-    }
-    /* 游戏规则面板 */
-    #rules {
-      position: absolute;
-      top: 80px;
-      left: 20px;
-      width: 200px;
-      background: rgba(255, 192, 203, 0.7);
-      color: black;
-      padding: 15px;
-      border-radius: 10px;
-      font-size: 16px;
-      text-align: left;
-      line-height: 1.5em;
-      z-index: 2;
-    }
+
     /* 背景切换层 */
     #bgLayer {
       position: fixed;
@@ -82,17 +22,122 @@
       background-size: cover;
       background-position: center;
       opacity: 1;
-      transition: opacity 2s ease; /* 渐变时间 */
+      transition: opacity 2s ease;
       z-index: -2;
+    }
+
+    /* 画布：加入半透明粉白蒙版 */
+    #gameCanvas {
+      display: block;
+      margin: 0 auto;
+      width: 720px;
+      height: 960px;
+      background: linear-gradient(rgba(255,255,255,0.4), rgba(255,182,193,0.15)), url("background.png") repeat-y;
+      background-size: cover;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      position: relative;
+      z-index: 1;
+    }
+
+    /* 分数显示 */
+    #score {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      color: #333;
+      font-size: 20px;
+      font-weight: bold;
+      padding: 8px 12px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      z-index: 3;
+    }
+
+    /* 开始 / 重新开始按钮 */
+    #startBtn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 15px 40px;
+      font-size: 24px;
+      cursor: pointer;
+      border: none;
+      border-radius: 20px;
+      background: rgba(255, 182, 193, 0.8);
+      color: #fff;
+      font-weight: bold;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+      transition: all 0.3s ease;
+      z-index: 3;
+    }
+    #startBtn:hover {
+      background: rgba(255, 182, 193, 1);
+      transform: translate(-50%, -50%) scale(1.05);
+    }
+
+    /* 手机提示 */
+    #mobileMsg {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 22px;
+      color: red;
+      background: rgba(255, 255, 255, 0.85);
+      padding: 10px 20px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      z-index: 3;
+    }
+
+    /* 游戏规则面板 */
+    #rules {
+      position: absolute;
+      top: 80px;
+      left: 20px;
+      width: 300px;
+      background: rgba(255, 255, 255, 0.8);
+      color: #333;
+      padding: 15px 20px;
+      border-radius: 15px;
+      font-size: 16px;
+      text-align: left;
+      line-height: 1.6em;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+      z-index: 3;
+    }
+
+    /* GitHub Issues 反馈按钮 */
+    #feedbackLink {
+      position: fixed;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      background: rgba(255,182,193,0.9);
+      color: white;
+      padding: 12px 18px;
+      border-radius: 12px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: all 0.3s ease;
+      z-index: 999;
+    }
+    #feedbackLink:hover {
+      background: rgba(255,182,193,1);
+      transform: translateY(-50%) scale(1.05);
     }
   </style>
 </head>
 <body>
-  <div id="bgLayer"></div> <!-- 背景层 -->
-  <div id="overlay"></div> <!-- 粉色半透明背景 -->
+  <div id="bgLayer"></div>
 
   <div id="score">捉弄次数: 0</div>
-  <canvas id="gameCanvas" width="480" height="640"></canvas>
+  <canvas id="gameCanvas" width="720" height="960"></canvas>
 
   <button id="startBtn">开始游戏</button>
   <div id="mobileMsg">该项目仅支持电脑端，请在PC浏览器中体验。</div>
@@ -109,7 +154,12 @@
     </ul>
   </div>
 
-  <!-- 背景音乐 -->
+  <!-- GitHub Issues 反馈按钮 -->
+  <a id="feedbackLink" href="https://github.com/WordDealer/WordDealer.github.io/issues" target="_blank">
+    联系地址，有问题新建issue
+  </a>
+
+  <!-- 音效 -->
   <audio id="bgm" src="bgm.mp3" loop></audio>
   <audio id="shootSound" src="shoot.mp3"></audio>
 
@@ -132,14 +182,19 @@
     const player = { x: canvas.width/2-20, y: canvas.height-80, width: 40, height: 40, speed: 5 };
     let bullets = [], enemies = [], score = 0, gameOver = false;
     const keys = {};
+    const eggTriggered = [];
+    let enemyInterval;
 
     document.addEventListener("keydown", e => keys[e.code] = true);
     document.addEventListener("keyup", e => keys[e.code] = false);
 
-    function drawPlayer() { if (playerImg.complete) ctx.drawImage(playerImg, player.x, player.y, player.width, player.height); }
+    function drawPlayer() { 
+      if (playerImg.complete) ctx.drawImage(playerImg, player.x, player.y, player.width, player.height); 
+    }
     function shoot() {
       bullets.push({ x: player.x+player.width/2-5, y: player.y, width:10, height:20, speed:7 });
-      shootSound.currentTime = 0; shootSound.play();
+      shootSound.currentTime = 0; 
+      shootSound.play();
     }
     function drawBullets() {
       bullets.forEach((b,i)=>{ 
@@ -148,7 +203,9 @@
         if(b.y<0) bullets.splice(i,1); 
       });
     }
-    function spawnEnemy() { enemies.push({ x: Math.random()*(canvas.width-40), y:-40, width:40, height:40, speed:2+Math.random()*2 }); }
+    function spawnEnemy() { 
+      enemies.push({ x: Math.random()*(canvas.width-40), y:-40, width:40, height:40, speed:2+Math.random()*2 }); 
+    }
     function drawEnemies() {
       enemies.forEach((e,i)=>{
         e.y+=e.speed; 
@@ -158,24 +215,69 @@
       });
     }
     function checkCollisions() {
-      bullets.forEach((b,bi)=>{ enemies.forEach((e,ei)=>{ 
-        if(isCircleColliding(b.x+b.width/2,b.y+b.height/2,b.width*0.3,e.x+e.width/2,e.y+e.height/2,e.width*0.3)){
-          bullets.splice(bi,1); enemies.splice(ei,1); score+=1; scoreEl.textContent="捉弄次数: "+score;
-        }
-      });});
+      bullets.forEach((b,bi)=>{ 
+        enemies.forEach((e,ei)=>{ 
+          if(isCircleColliding(b.x+b.width/2,b.y+b.height/2,b.width*0.3,e.x+e.width/2,e.y+e.height/2,e.width*0.3)){
+            bullets.splice(bi,1); 
+            enemies.splice(ei,1); 
+            score+=1; 
+            scoreEl.textContent="捉弄次数: "+score;
+          }
+        });
+      });
     }
-    function isCircleColliding(x1,y1,r1,x2,y2,r2){ const dx=x1-x2,dy=y1-y2; return Math.sqrt(dx*dx+dy*dy)<r1+r2; }
+    function isCircleColliding(x1,y1,r1,x2,y2,r2){ 
+      const dx=x1-x2,dy=y1-y2; 
+      return Math.sqrt(dx*dx+dy*dy)<r1+r2; 
+    }
 
-    let enemyInterval;
-    function gameLoop(){
-      if(gameOver){
-        ctx.fillStyle="white";
-        ctx.font="40px Arial";
-        ctx.fillText("捉弄失败",canvas.width/2-100,canvas.height/2);
-        return;
+    // 彩蛋弹幕
+    function showEgg() {
+      const egg = document.createElement("div");
+      egg.textContent = "高木赛高~";
+      egg.style.position = "fixed";
+      egg.style.top = Math.random() * (window.innerHeight - 50) + "px";
+      egg.style.left = "-300px";
+      egg.style.fontSize = "50px";
+      egg.style.color = "#ffdd00";
+      egg.style.fontWeight = "bold";
+      egg.style.zIndex = "9999";
+      egg.style.whiteSpace = "nowrap";
+      document.body.appendChild(egg);
+
+      let left = -300;
+      const interval = setInterval(() => {
+        left += 10;
+        egg.style.left = left + "px";
+        if (left > window.innerWidth) {
+          clearInterval(interval);
+          document.body.removeChild(egg);
+        }
+      }, 30);
+    }
+    function checkEgg() {
+      if ((score === 10 || score === 100) && !eggTriggered.includes(score)) {
+        eggTriggered.push(score);
+        const eggInterval = setInterval(showEgg, 300);
+        setTimeout(() => clearInterval(eggInterval), 5000);
       }
+    }
+
+    // 游戏循环
+    function gameLoop() {
       ctx.clearRect(0,0,canvas.width,canvas.height);
 
+      if(gameOver){
+        ctx.fillStyle = "white";
+        ctx.font = "40px Arial";
+        ctx.fillText("捉弄失败", canvas.width/2 - 100, canvas.height/2);
+        startBtn.textContent = "重新开始";
+        startBtn.style.display = "block";
+        clearInterval(enemyInterval);
+        return;
+      }
+
+      // 玩家移动
       if(keys["ArrowLeft"] && player.x>0) player.x-=player.speed;
       if(keys["ArrowRight"] && player.x<canvas.width-player.width) player.x+=player.speed;
       if(keys["ArrowUp"] && player.y>0) player.y-=player.speed;
@@ -186,33 +288,46 @@
       drawBullets();
       drawEnemies();
       checkCollisions();
+      checkEgg();
 
       requestAnimationFrame(gameLoop);
     }
 
-    startBtn.addEventListener("click", () => {
-      startBtn.style.display="none";
-      bgm.volume=0.5; bgm.play();
+    // 重置游戏
+    function resetGame() {
+      score = 0;
+      scoreEl.textContent = "捉弄次数: " + score;
+      bullets = [];
+      enemies = [];
+      player.x = canvas.width/2 - 20;
+      player.y = canvas.height - 80;
+      gameOver = false;
+      startBtn.style.display = "none";
+      enemyInterval = setInterval(spawnEnemy, 1000);
+      gameLoop();
+    }
 
-      playerImg.onload = () => { enemyInterval = setInterval(spawnEnemy,1000); gameLoop(); };
-      if(playerImg.complete){ enemyInterval = setInterval(spawnEnemy,1000); gameLoop(); }
+    startBtn.addEventListener("click", () => {
+      bgm.volume = 0.5;
+      bgm.play();
+      resetGame();
     });
 
-    // === 自动背景切换 ===
+    // 自动背景切换
     const bgList = ["bg1.jpg","bg2.jpg","bg3.jpg","bg4.jpg","bg5.jpg","bg6.jpg"];
     let bgIndex = 0;
     const bgLayer = document.getElementById("bgLayer");
 
     function changeBackground(){
-      bgLayer.style.opacity = 0; // 先淡出
+      bgLayer.style.opacity = 0; 
       setTimeout(()=>{
         bgIndex = (bgIndex+1)%bgList.length;
         bgLayer.style.backgroundImage = `url(${bgList[bgIndex]})`;
-        bgLayer.style.opacity = 1; // 再淡入
-      },2000); // 等淡出结束
+        bgLayer.style.opacity = 1; 
+      },2000);
     }
     bgLayer.style.backgroundImage = `url(${bgList[bgIndex]})`;
-    setInterval(changeBackground, 8000); // 每 8 秒换一次背景
+    setInterval(changeBackground, 8000);
   </script>
 </body>
 </html>
